# ipsum

./: .bazelignore  .bazelrc  .clang-format  .gitignore  BUILD.bazel  CMakeLists.txt  CMakePresets.json  README.md  WORKSPACE.bazel  assembly.c  bench.cpp  bench.sh  bench_triangle.cpp  bench_triangle.sh  bit_field.h  build.sh  build_x86_general_debug.sh  celero.BUILD  container.hpp  file.c  interface.c  main.c  main.cpp  rasterizer.cpp  raycaster.cpp  run.sh  run_arm_general.sh  run_arm_general_debug.sh  run_arm_sve.sh  run_arm_sve_debug.sh  run_x86_avx2.sh  run_x86_avx2_debug.sh  run_x86_avx512.sh  run_x86_avx512_debug.sh  run_x86_general.sh  run_x86_general_debug.sh  swap.h  triangle.cc  triangle.h  triangle_joshbeam.cc  (+4 more)
.buildkite/: pipeline.py  pipeline.yml
assembly/: BUILD.bazel
cmake/toolchains/: aarch64.cmake
files/fuse/: Makefile  main.c
files/git/: Makefile
files/pack/: Makefile
files/wad/: BUILD.bazel  main.c  wad.c
fs/fuse/: Makefile  ssfs.c
fs/git/: main.c
fs/pack/: main  main.c
general/assembly/: assembly.c  maxofthree.s
graphics/rasterizer/: bench.cpp  bench.sh  rasterizer.cpp  triangle.h  triangle_joshbeam.cc  triangle_trinki2_p1.cc
graphics/raycaster/: BUILD.bazel  raycaster.cpp
ideas/: BUILD.bazel  interface.c
rasterizer/: BUILD.bazel  bench.cpp  bench.sh  rasterizer.cpp  triangle_joshbeam.cc  triangle_trinki2_p1.cc
raycaster/: BUILD.bazel
triangle/: BUILD.bazel  bench.cpp  bench.sh  triangle.h  triangle_joshbeam.cc  triangle_trinki2_p1.cc
