cc_library(
    name = "util",
    srcs = [
        "util.cc",
    ],
    hdrs = [
        "util.h",
    ],
    visibility = [
        "//visibility:public",
    ],
)

cc_library(
    name = "vector",
    hdrs = [
        "vector.hpp",
    ],
)

cc_binary(
    name = "main",
    srcs = [
        "main.cpp",
    ],
    deps = [
        ":vector",
    ],
)
