cc_library(
    name = "util",
    srcs = [
        "util.cc",
    ],
    hdrs = [
        "util.h",
    ],
    visibility = [
        "//visibility:public",
    ],
)

cc_binary(
    name = "interface",
    srcs = [
        "interface.c",
    ],
    deps = [
        ":util",
    ],
)

cc_binary(
    name = "file",
    srcs = [
        "file.c",
    ],
    linkopts = [
        "-luring",
    ],
    deps = [
        ":util",
    ],
)
