cc_library(
    name = "util",
    srcs = [
        "util.cc",
    ],
    hdrs = [
        "util.h",
    ],
    visibility = [
        "//visibility:public",
    ],
)

cc_binary(
    name = "main",
    srcs = [
        "main.cpp",
    ],
    deps = [
        ":util",
    ],
)

cc_library(
    name = "swap",
    hdrs = [
        "swap.h",
    ],
)

cc_library(
    name = "bit_field",
    hdrs = [
        "bit_field.h",
    ],
    deps = [
        ":swap",
    ],
)
