cc_binary(
    name = "interface",
    srcs = [
        "interface.c",
    ],
    deps = [
        "//:util",
    ],
)

# cc_binary(
#     name = "file",
#     srcs = [
#         "file.c",
#     ],
#     linkopts = [
#         "-luring",
#     ],
#     deps = [
#         "//:util",
#     ],
# )

cc_library(
    name = "container",
    hdrs = [
        "container.hpp",
    ],
)

cc_library(
    name = "vector",
    hdrs = [
        "vector.hpp",
    ],
)
